fixed letter-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@ ol {
   font-size: 18px;
   line-height: 100%;
   font-weight: 400;
-  letter-spacing: 0;
+  letter-spacing: 0px;
   padding-bottom: 5px;
 }
 
@@ -129,7 +129,7 @@ ol {
   font-style: normal;
   font-size: 18px;
   line-height: 100%;
-  letter-spacing: 0;
+  letter-spacing: 0px;
   border: none;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
@@ -239,7 +239,7 @@ ol {
   text-transform: uppercase;
   line-height: 94%;
   font-weight: 700;
-  letter-spacing: 0;
+  letter-spacing: 0px;
 }
 
 .title .content__accent {
